# dependent-types

./: .gitignore  LICENSE  README.md  README.rst  __ast__.py  decorator.py  matrix.py  metaclass.py  pyproject.toml  test.py  test2.py  test3.py  test_inconsistent.py  test_isinstance.py  test_issubclass.py  test_marcos.py  type_composition.py
.github/workflows/: test.yml  tests.yml
dependent_types/: __init__.py  dependent_type.py  metaclass.py  predicates.py  test.py  visitor.py
dependent_types/ast/: __init__.py  base.py  literals.py  operators.py
dependent_types/dtypes_ast/: literals.py
dependent_types/ranges/: Range.py  RangeList.py  RangeSet.py  __init__.py  _helper.py
dependent_types/utils/: __init__.py  contraints.py  dict.py
dependent_types/visitor/: __init__.py  dependent_type.py  generic.py  type_inference.py
docs/: introduction.md  isinstance.md  issubclass.md  motivation.rst
docs/md/: motivation.md
docs/source/: conf.py  index.rst
dtypes/: __init__.py  _visitor.py  dependent_type.py  metaclasses.py  predicates.py  proof.py  test.py  test2.py  type_composition.py  visitor.py
dtypes/ast/: __init__.py  base.py  literals.py  operators.py
dtypes/ast_nodes/: __init__.py  base.py  literals.py  operators.py
dtypes/ranges/: Range.py  RangeDict.py  RangeList.py  (+3 more)
src/: metaclass.py  operators.py  predicates.py  proof.py  test.py  test2.py  test3.py  test_isinstance.py  test_issubclass.py  test_marcos.py  type_composition.py  visitor.py
tests/: matrix.py  test2.py  test_inconsistent.py  test_isinstance.py  test_issubclass.py  test_marcos.py
(+11 files in other folders)
