[tool.poetry]
name = "dependent-types"
version = "0.1.0"
description = ""
authors = ["leandro-driguez <leandro_driguez@outlook.com>"]
readme = "README.md"
packages = [{include = "dependent_types"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
